fix(scss): fix height to fit screensize on mobile devices

--- a/src/assets/scss/base/base.scss
+++ b/src/assets/scss/base/base.scss
@@ -6,6 +6,7 @@
 */
 body {
   height: 100vh;
+  height: 100svh;
   font-family: 'Roboto', sans-serif;
   background-color: $bg-color;
 }
